--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: python-rpds-py
 Section: python
 Priority: optional
 Standards-Version: 4.5.0
-Maintainer: Wong Hoi Sing Edison <hswong3i@gmail.com>
+Maintainer: Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 Homepage: https://github.com/crate-py/rpds/tags
 Vcs-Browser: https://github.com/alvistack/crate-py-rpds
 Vcs-Git: https://github.com/alvistack/crate-py-rpds.git
